# lua-proc

./: README.md  configure.ac
include/: Makefile.am  lua-proc.h
share/: Makefile.am  lua-proc.3
src/: Makefile.am  dlist.h  info.c  info.h  proc.c
test/: test-proc.lua
